methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:4: error: type mismatch;
 found   : Unit
 required: Int
    avance(nbPas)
          ^MethodsArgs:6: error: type mismatch;
 found   : Unit
 required: Int
    recule(nbPas)
          ^